--- a/dream_wedding_site_pack/index-2.html
+++ b/dream_wedding_site_pack/index-2.html
@@ -2,44 +2,43 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 适配移动端 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>梦中的婚礼体验馆</title>
-    <!-- 引入手写体字体 -->
+    <!-- 手写体字体 -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <style>
-        /* 基础样式优化 */
-        html { scroll-behavior: smooth; } /* 平滑滚动 */
+        html { scroll-behavior: smooth; }
         body { font-family: 'Helvetica Neue', Arial, sans-serif; background-color: #FFF9FA; margin: 0; padding: 0; color: #4a2c2a; line-height: 1.8;}
-        /* 头部样式 */
+
         header { background-color: #f7e6eb; padding: 20px; text-align: center; border-bottom: 2px solid #e0b7c8; position: relative;}
         header h1 { margin: 0; color: #b45d7e; font-family: 'Dancing Script', cursive; font-size: 2.5em;}
-        /* 导航栏样式（含固定效果） */
+
         nav { margin-top: 10px; }
         nav a { margin: 0 15px; text-decoration: none; color: #4a2c2a; font-weight: bold; transition: all 0.3s;}
         nav a:hover { color: #b45d7e; text-decoration: underline;}
         .fixed-nav { position: fixed; top: 0; width: 100%; background: rgba(247,230,235,0.95); z-index: 999; padding: 10px 0; border-bottom: 2px solid #e0b7c8;}
-        /* section通用样式 */
+
         section { padding: 40px 20px; text-align: center; max-width: 1400px; margin: 0 auto;}
         section h2 { color: #b45d7e; margin-bottom: 30px; font-family: 'Dancing Script', cursive; font-size: 2em;}
         section p { font-size: 1.1em; margin-bottom: 20px;}
-        /* Logo样式 */
+
         .logo { max-width: 300px; margin: 20px auto; border-radius: 10px;}
-        /* 服务卡片样式 */
+
         .service-list { display: flex; justify-content: space-between; flex-wrap: wrap; max-width: 1200px; margin: 0 auto;}
         .service-card { width: 45%; min-width: 300px; background: white; padding: 20px; border-radius: 10px; margin: 15px 0; box-shadow: 0 2px 10px rgba(180,93,126,0.1); transition: all 0.3s;}
         .service-card img { width: 100%; height: 200px; object-fit: cover; border-radius: 5px; margin-bottom: 15px;}
         .service-card:hover { box-shadow: 0 5px 15px rgba(180,93,126,0.2); transform: translateY(-5px);}
-        /* 预约表单样式 */
+
         .reserve-form { max-width: 600px; margin: 0 auto; text-align: left; padding: 25px; background: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(180,93,126,0.1);}
         .reserve-form label { display: block; margin: 12px 0 5px; color: #8A4F64; font-weight: 500;}
         .reserve-form input, .reserve-form select { width: 100%; padding: 12px; border: 1px solid #F9C2D1; border-radius: 5px; margin-bottom: 15px; box-sizing: border-box;}
         .reserve-form button { width: 100%; padding: 12px; background: #B45D7E; color: white; border: none; border-radius: 5px; font-weight: bold; cursor: pointer; transition: all 0.3s;}
         .reserve-form button:hover { background: #8A4F64; transform: scale(1.02);}
-        /* FAQ样式 */
+
         .faq-list { max-width: 800px; margin: 0 auto; text-align: left;}
         .faq-item { margin: 15px 0; border-bottom: 1px dashed #F9C2D1; padding-bottom: 15px;}
         .faq-item h3 { color: #8A4F64; cursor: pointer; margin: 0;}
-        /* 底部样式 */
+
         footer { background-color: #f7e6eb; text-align: center; padding: 25px; font-size: 0.9em; color: #777; border-top: 2px solid #e0b7c8; margin-top: 30px;}
         .footer-info { margin-top: 10px;}
         .footer-info a { color: #B45D7E; text-decoration: none; margin: 0 8px;}
@@ -49,44 +48,44 @@
     <header>
         <h1>梦中的婚礼体验馆</h1>
         <nav id="main-nav">
-            <a href="#about">关于我们</a>
-            <a href="#service">体验服务</a>
-            <a href="#reserve">预约体验</a>
-            <a href="#faq">常见问题</a>
-            <a href="#contact">联系我们</a>
+            <a href=" ">关于我们</a >
+            <a href="#service">体验服务</a >
+            <a href="#reserve">预约体验</a >
+            <a href="#faq">常见问题</a >
+            <a href="#contact">联系我们</a >
         </nav>
     </header>
 
     <section id="about">
         <h2>关于我们</h2>
-        <img src="B4CDB4F7-DA9B-44E9-8542-4D30EBE62BBC.jpeg" alt="梦中的婚礼Logo" class="logo">
-        <p>我们专注于为年轻人提供浪漫、无压力的沉浸式婚礼体验。</p>
-        <p>无论是情侣、单身，还是筹备中的新人，都可以在这里感受属于自己的“梦中婚礼”。</p>
-        <p>我们相信，婚礼不该是“压力”，而该是“憧憬”——因此我们拒绝繁琐流程与高额消费，只为让每一个人都能轻松感受婚礼的浪漫与美好。</p>
+        < img src="logo.jpg" alt="梦中的婚礼Logo" class="logo">
+        <p>我们专注于为年轻人提供浪漫、无压力的沉浸式婚礼体验。</p >
+        <p>无论是情侣、单身，还是筹备中的新人，都可以在这里感受属于自己的“梦中婚礼”。</p >
+        <p>我们相信，婚礼不该是“压力”，而该是“憧憬”——因此我们拒绝繁琐流程与高额消费，只为让每一个人都能轻松感受婚礼的浪漫与美好。</p >
     </section>
 
     <section id="service">
         <h2>体验服务</h2>
         <div class="service-list">
             <div class="service-card">
-                <img src="沉浸式流程.jpg" alt="沉浸式婚礼流程">
+                < img src="flow.jpg" alt="沉浸式婚礼流程">
                 <h3 style="color: #8A4F64;">沉浸式婚礼流程体验</h3>
-                <p>走过铺满花瓣的红毯，在亲友（或工作人员）的见证下交换誓言，最后开启浪漫舞会——完整还原婚礼核心环节，感受仪式感。</p>
+                <p>走过铺满花瓣的红毯，在亲友（或工作人员）的见证下交换誓言，最后开启浪漫舞会——完整还原婚礼核心环节，感受仪式感。</p >
             </div>
             <div class="service-card">
-                <img src="主题场景.jpg" alt="主题婚礼场景">
+                < img src="scene.jpg" alt="主题婚礼场景">
                 <h3 style="color: #8A4F64;">主题婚礼场景体验</h3>
-                <p>森系（绿植+碎花）、复古（油画+蕾丝）、中式（红绸+灯笼）、西式（白纱+蜡烛），4大主题任选，沉浸式感受不同文化的婚礼美学。</p>
+                <p>森系（绿植+碎花）、复古（油画+蕾丝）、中式（红绸+灯笼）、西式（白纱+蜡烛），4大主题任选，沉浸式感受不同文化的婚礼美学。</p >
             </div>
             <div class="service-card">
-                <img src="婚礼拍摄.jpg" alt="婚礼互动拍摄">
+                < img src="photo.jpg" alt="婚礼互动拍摄">
                 <h3 style="color: #8A4F64;">婚礼互动拍摄区</h3>
-                <p>免费试穿10+款婚纱/礼服，专业摄影师拍摄写真；可定制15秒婚礼短片（含剪辑+配乐），留下专属浪漫回忆。</p>
+                <p>免费试穿10+款婚纱/礼服，专业摄影师拍摄写真；可定制15秒婚礼短片（含剪辑+配乐），留下专属浪漫回忆。</p >
             </div>
             <div class="service-card">
-                <img src="轻婚礼派对.jpg" alt="轻婚礼派对">
+                < img src="party.jpg" alt="轻婚礼派对">
                 <h3 style="color: #8A4F64;">轻婚礼派对</h3>
-                <p>每周六晚举办轻派对，提供香槟、小甜点，可与其他用户互动游戏、分享婚礼憧憬，在轻松氛围中结交同频朋友。</p>
+                <p>每周六晚举办轻派对，提供香槟、小甜点，可与其他用户互动游戏、分享婚礼憧憬，在轻松氛围中结交同频朋友。</p >
             </div>
         </div>
     </section>
@@ -122,42 +121,41 @@
         <div class="faq-list">
             <div class="faq-item">
                 <h3>Q：单身可以预约婚礼体验吗？</h3>
-                <p>A：当然可以！我们欢迎所有对婚礼有憧憬的人，单身用户可体验“婚纱拍摄”“场景参观”“沉浸式流程”，也可参与“轻婚礼派对”结交朋友。</p>
+                <p>A：当然可以！我们欢迎所有对婚礼有憧憬的人，单身用户可体验“婚纱拍摄”“场景参观”“沉浸式流程”，也可参与“轻婚礼派对”结交朋友。</p >
             </div>
             <div class="faq-item">
                 <h3>Q：预约后可以更改体验类型或日期吗？</h3>
-                <p>A：可以！请至少提前1天拨打400-1234-5678联系客服更改，我们会根据档期尽力协调；若临时取消，需提前6小时告知，避免占用名额。</p>
+                <p>A：可以！请至少提前1天拨打400-1234-5678联系客服更改，我们会根据档期尽力协调；若临时取消，需提前6小时告知，避免占用名额。</p >
             </div>
             <div class="faq-item">
                 <h3>Q：可以带亲友一起参观吗？</h3>
-                <p>A：可以！每位预约用户可携带1-2位亲友同行，亲友可免费参观场景、观看体验流程（不参与互动环节，如需参与需额外预约）。</p>
+                <p>A：可以！每位预约用户可携带1-2位亲友同行，亲友可免费参观场景、观看体验流程（不参与互动环节，如需参与需额外预约）。</p >
             </div>
         </div>
     </section>
 
     <section id="contact">
         <h2>联系我们</h2>
-        <p>📍 地址：XX市XX区XX路XX号XX商场3层（近地铁2号线XX站A口，步行5分钟）</p>
-        <p>📞 电话：400-1234-5678（客服时间：9:00-21:00）</p>
-        <p>📧 邮箱：dreamwedding@example.com</p>
+        <p>📍 地址：XX市XX区XX路XX号XX商场3层（近地铁2号线XX站A口，步行5分钟）</p >
+        <p>📞 电话：400-1234-5678（客服时间：9:00-21:00）</p >
+        <p>📧 邮箱：dreamwedding@example.com</p >
         <p>
-            <img src="微信公众号二维码.jpg" alt="微信公众号" style="width: 100px; height: 100px; margin: 0 10px;">
-        </p>
-        <p>（扫码关注，获取最新场景更新及优惠活动）</p>
+            < img src="qrcode.jpg" alt="微信公众号" style="width:100px; height:100px; margin:0 10px;">
+        </p >
+        <p>（扫码关注，获取最新场景更新及优惠活动）</p >
     </section>
 
     <footer>
-        <p>&copy; 2025 梦中的婚礼体验馆 | 打造属于每个人的浪漫婚礼</p>
+        <p>&copy; 2025 梦中的婚礼体验馆 | 打造属于每个人的浪漫婚礼</p >
         <div class="footer-info">
-            <a href="#">隐私政策</a>
-            <a href="#">服务条款</a>
-            <a href="#">场景更新公告</a>
+            <a href="#">隐私政策</a >
+            <a href="#">服务条款</a >
+            <a href="#">场景更新公告</a >
         </div>
     </footer>
 
-    <!-- 交互JS：导航固定+导航高亮 -->
     <script>
-        // 1. 导航栏固定
+        // 固定導航 + 高亮
         window.addEventListener('scroll', function() {
             const nav = document.getElementById('main-nav');
             const headerHeight = document.querySelector('header').offsetHeight;
@@ -167,27 +165,23 @@
                 nav.classList.remove('fixed-nav');
             }
 
-            // 2. 导航高亮（根据滚动位置）
             const sections = document.querySelectorAll('section');
             const navLinks = document.querySelectorAll('#main-nav a');
             let currentSection = '';
 
             sections.forEach(section => {
                 const sectionTop = section.offsetTop;
-                const sectionHeight = section.offsetHeight;
                 if (window.scrollY >= (sectionTop - 100)) {
                     currentSection = section.getAttribute('id');
                 }
             });
 
             navLinks.forEach(link => {
-                link.classList.remove('active');
+                link.style.color = '#4A2C2A';
+                link.style.textDecoration = 'none';
                 if (link.getAttribute('href').substring(1) === currentSection) {
                     link.style.color = '#B45D7E';
                     link.style.textDecoration = 'underline';
-                } else {
-                    link.style.color = '#4A2C2A';
-                    link.style.textDecoration = 'none';
                 }
             });
         });
